assets/stylesheets/style.css
/* ... */
    .dataTables_filter input:hover {
      border-color: #c7c7c7 !important; }
    .dataTables_filter input:focus {
      border-color: #39A8DF !important; }

table.dataTable.no-footer {
  border-bottom: 1px solid #E0E0E0;
  margin-bottom: 1.25rem; }

.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
  color: #E0E0E0 !important;
  border: 1px solid transparent; }

.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
  color: #39A8DF !important;
  border: 1px solid #39A8DF !important;
  background-image: linear-gradient(-180deg, rgba(237, 237, 237, 0) 0%, rgba(56, 168, 223, 0.14) 100%);
  border-radius: 3px; }

.dataTables_wrapper .dataTables_paginate .paginate_button {
  color: #39A8DF !important; }

.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
  border: 1px solid transparent;
  background-color: transparent;
  background: transparent;
  color: #208ec5 !important; }

/* Slider */
.slick-slider {
  position: relative;
  display: block;
  box-sizing: border-box;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: pan-y;
  -webkit-tap-highlight-color: transparent; }

.slick-list {
  position: relative;
  overflow: hidden;
  display: block;
  margin: 0;
  padding: 0; }
  .slick-list:focus {
    outline: none; }
  .slick-list.dragging {
    cursor: pointer;
    cursor: hand; }

.slick-slider .slick-track,
.slick-slider .slick-list {
  transform: translate3d(0, 0, 0); }

.slick-track {
  position: relative;
  left: 0;
  top: 0;
  display: block; }
  .slick-track:before, .slick-track:after {
    content: "";
    display: table; }
  .slick-track:after {
    clear: both; }
  .slick-loading .slick-track {
    visibility: hidden; }

.slick-slide {
  float: left;
  height: 100%;
  min-height: 1px;
  display: none; }
  [dir="rtl"] .slick-slide {
    float: right; }
  .slick-slide img {
    display: block; }
  .slick-slide.slick-loading img {
    display: none; }
  .slick-slide.dragging img {
    pointer-events: none; }
  .slick-initialized .slick-slide {
    display: block; }
  .slick-loading .slick-slide {
    visibility: hidden; }
  .slick-vertical .slick-slide {
    display: block;
    height: auto;
    border: 1px solid transparent; }

.slick-arrow.slick-hidden {
  display: none; }

.slider {
  position: relative; }

.slick-slider {
  margin-bottom: 0; }

.slider-item {
  background-repeat: no-repeat;
  margin-bottom: 0;
  text-align: center; }
  .slider-item img {
    width: 175px;
    margin: auto; }
  .slider-item p {
    font-size: 1.4rem; }
    @media (min-width: 550px) {
      .slider-item p {
        font-size: 1.6rem; } }
    @media (min-width: 700px) {
      .slider-item p {
        font-size: 1.8rem;
        margin-bottom: 3rem; } }
  @media (min-width: 550px) {
    .slider-item {
      text-align: left; }
      .slider-item img {
        width: auto; } }

.slick-dots {
  list-style-type: none;
  text-align: center;
  padding: 2.5rem 0;
  margin-bottom: 0;
  position: relative;
  z-index: 2; }
  .slick-dots li {
    display: inline-block;
    padding: 0;
    margin: 0 0.625rem;
    background-color: transparent;
    border: 2px solid #39A8DF;
    border-radius: 500px;
    height: 14px;
    width: 14px;
    box-sizing: border-box;
    margin-bottom: 0;
    transition: all .2s ease-in; }
    .slick-dots li:hover, .slick-dots li:focus {
      cursor: pointer;
      border: 2px solid #2192ca; }
  .slick-dots .slick-active {
    background-color: #39A8DF; }
    .slick-dots .slick-active:hover, .slick-dots .slick-active:focus {
      cursor: pointer;
      background-color: #2192ca; }
  .slick-dots button {
    text-indent: -9999px;
    background-color: transparent;
    border: none;
    padding: 0;
    line-height: 0;
    margin: 0; }

.twentytwenty-horizontal .twentytwenty-handle:before, .twentytwenty-horizontal .twentytwenty-handle:after, .twentytwenty-vertical .twentytwenty-handle:before, .twentytwenty-vertical .twentytwenty-handle:after {
  content: " ";
  display: block;
  background: white;
  position: absolute;
  z-index: 30;
  box-shadow: 0px 0px 12px rgba(51, 51, 51, 0.5); }

.twentytwenty-horizontal .twentytwenty-handle:before, .twentytwenty-horizontal .twentytwenty-handle:after {
  width: 3px;
  height: 9999px;
  left: 50%;
  margin-left: -1.5px; }

.twentytwenty-vertical .twentytwenty-handle:before, .twentytwenty-vertical .twentytwenty-handle:after {
  width: 9999px;
  height: 3px;
  top: 50%;
  margin-top: -1.5px; }

.twentytwenty-before-label, .twentytwenty-after-label, .twentytwenty-overlay {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%; }

.twentytwenty-before-label, .twentytwenty-after-label, .twentytwenty-overlay {
  transition-duration: 0.5s; }

.twentytwenty-before-label, .twentytwenty-after-label {
  transition-property: opacity; }

.twentytwenty-before-label:before, .twentytwenty-after-label:before {
  color: white;
  font-size: 13px;
  letter-spacing: 0.1em; }

.twentytwenty-before-label:before, .twentytwenty-after-label:before {
  position: absolute;
  background: rgba(255, 255, 255, 0.2);
  line-height: 38px;
  padding: 0 20px;
  border-radius: 2px; }

.twentytwenty-horizontal .twentytwenty-before-label:before, .twentytwenty-horizontal .twentytwenty-after-label:before {
  top: 50%;
  margin-top: -19px; }

.twentytwenty-vertical .twentytwenty-before-label:before, .twentytwenty-vertical .twentytwenty-after-label:before {
  left: 50%;
  margin-left: -45px;
  text-align: center;
  width: 90px; }

.twentytwenty-left-arrow, .twentytwenty-right-arrow, .twentytwenty-up-arrow, .twentytwenty-down-arrow {
  width: 0;
  height: 0;
  border: 6px inset transparent;
  position: absolute; }
/* ... */

